--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <form  class="form-for" action="">
+    <form  class="form-for" d="sign-up" action="" method="" novalidate>
         <div class="input-field">
             <label for="username">Enter User Name:</label>
             <input type="text" id="username" placeholder="user name" required />
@@ -26,21 +26,22 @@
         </div>
         <div class="input-field">
             <label for="personal_number">Personal Number:</label>
-            <input type="number" id="password" placeholder="Personal Number" minlength="11" />
-            <span class="error-message" id="Personal-Number-error"></span>
+            <input type="number" id="prnumber" placeholder="Personal Number" minlength="11" maxlength="11" required />
+            <span class="error-message" id="prnumber-error"></span>
         </div>
         <div class="input-field">
             <label for="phone">Enter your phone number:</label>
-            <input type="tel" id="phone" name="phone"  placeholder="Phone Number" pattern="[0-9]{3}-[0-9]{2}-[0-9]{3}" required>
+            <input type="tel" id="phone" name="phone"  placeholder="Phone Number" pattern="[5--]{-}-[---]{-}-[---]{-}" required>
             <span class="error-message" id="Phone-error"></span>
           </div>
         <div class="input-field">
-            <textarea name="message" class="txt-area">Position</textarea>
+            <textarea name="message" id="position" class="txt-area" minlength="30">Position</textarea>
             <span class="error-message" id="message-error"></span>
         </div>
         <div class="input-field">
             <button class="btn" type="submit">Submit</button>
         </div>
     </form>
+    <script src="app.js"></script>
 </body>
 </html>
